testsuite/tests/typecheck/should_fail/T26318.stderr
T26318.hs:6:16: error: [GHC-68567]
    Illegal type: ‘x : xs’
    Suggested fix:
      Perhaps you intended to use the ‘DataKinds’ extension (implied by ‘UnliftedDatatypes’)

T26318.hs:9:16: error: [GHC-68567]
    Illegal type: ‘x ': xs’
    Suggested fix:
      Perhaps you intended to use the ‘DataKinds’ extension (implied by ‘UnliftedDatatypes’)

T26318.hs:12:14: error: [GHC-68567]
    Illegal type: ‘(:)’
    Suggested fix:
      Perhaps you intended to use the ‘DataKinds’ extension (implied by ‘UnliftedDatatypes’)

T26318.hs:15:14: error: [GHC-68567]
    Illegal type: ‘'(:)’
    Suggested fix:
      Perhaps you intended to use the ‘DataKinds’ extension (implied by ‘UnliftedDatatypes’)

